Spacing fix
Fixed line height bug that made a weird vertical space bug, solved with a hack in the previous commit.

Emil helped me out <3

--- a/css/tres.css
+++ b/css/tres.css
@@ -5,6 +5,7 @@
 
   font-family: "Fira Code", monospace;
   font-size: 64px;
+  line-height: 0;
   text-align: center;
   font-weight: 700;
   color: var(--color-negative-20);
@@ -46,10 +47,6 @@ input[type="number"] {
 .cxd {
   display: flex;
   justify-content: space-between;
-}
-
-.cxd {
-  margin-bottom: -20px;
 }
 
 .input-variable {
